# SeaInvaders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
include/: bus.h  cpu.h  cpu_utils.h  flags.h  input_handler.h  renderer.h  shift_register.h
src/: bus.c  cpu.c  cpu_utils.c  flags.c  input_handler.c  machine.c  main.c  renderer.c  shift_register.c
